--- a/css/style.css
+++ b/css/style.css
@@ -27,12 +27,35 @@ input {
 }
 
 .url-bar {
+  position: relative;
   float: left;
   border: 1px solid #999;
   width: 400px;
   background-color: #fff;
   padding: 2px 8px 3px 8px;
   border-radius: 3px;
+}
+
+.url-button {
+  position: absolute;
+  right: 3px;
+  top: 3px;
+  z-index: 10;
+  background: #bbb;
+  border: 1px solid #999;
+  font-size: 10px;
+  letter-spacing: 0.5px;
+  font-weight: bold;
+  color: #fff;
+  padding: 2px 3px;
+  border-radius: 3px;
+  cursor: default;
+  transform: scale(0.8);
+  text-transform: uppercase;
+}
+.url-button:hover {
+  color: #fff;
+  background-color: #999;
 }
 
 .dropdown {
